--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     scroll-behavior: smooth;
 }
 
+body {
+    background-color: #E1E5EE;
+}
+
 .nav-bar {
     display: flex;
     justify-content: center;
@@ -23,15 +27,23 @@
 
 .welcome-header h1 {
     font-size: 2rem;
-    margin: 0;
+    margin-bottom: 10px;
     letter-spacing: 1rem;
-    color: #eee;
+    color: #F7C59F;
+}
+
+.welcome-header h1 span {
+    color: #2A324B;
 }
 
 .welcome-header h3 {
     font-size: 1rem;
-    letter-spacing: 0.3rem;
     opacity: 0.6;
+    color: #fff;
+    background-color: #767B91;
+    padding: 10px;
+    border-radius: 20px;
+    font-weight: lighter;
 }
 
 .welcome-header a {
@@ -39,10 +51,17 @@
 }
 
 .social-icons {
-    padding-top: 5px;
-    padding-right: 30px;
-    align-items: center;
-    color: white;
+    margin-top: 10px;
+}
+
+.social-icons a {
+    padding: 5px;
+    color: #2A324B;
+}
+
+.social-icons a:hover {
+    background-color: #F7C59F;
+    border-radius: 50%;
 }
 
 .menu-container {
@@ -53,8 +72,9 @@
     width: 100%;
     height: 70px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    background: #fff;
+    background: #F7C59F;
     z-index: 10;
+    text-transform: none;
 }
 
 .menu-container--top {
@@ -67,15 +87,16 @@
     justify-content: center;
     align-items: center;
     flex: 1;
-    color: #000;
+    color: #2A324B;
     letter-spacing: 0.1rem;
     transition: all 0.5s ease;
     font-size: 0.8rem;
+    text-decoration: none;
 }
 
 .menu-tab:hover {
-    color: white;
-    background: #8c8c4f;
+    background: #2A324B;
+    color: #fff;
     transition: all 0.5s ease;
 }
 
@@ -86,4 +107,283 @@
     height: 6px;
     background: #8c8c4f;
     transition: left 0.3s ease;
+}
+
+.container {
+    width: 80%;
+    margin: 30px auto;
+    text-align: center;
+
+}
+
+.style-sections {
+    display: block;
+    text-align: center;
+    padding: 30px 10px;
+}
+
+.style-sections h1 {
+    padding: 20px;
+    color: #2A324B;
+}
+
+.style-sections h2 {
+    padding-top: 10px;
+    padding-bottom: 20px;
+    color: black;
+    font-family: serif;
+    font-weight: 900;
+}
+
+.style-sections p {
+    color: #2A324B;
+    text-align: center;
+    padding: 20px;
+}
+
+.style-sections .content {
+    width: 33%;
+    display: inline-block;
+}
+
+.about {
+    background-color: #eee;
+    border-radius: 10px;
+    height: auto;
+}
+
+.about p {
+    text-align: left;
+}
+
+.skills-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    padding: 10px;
+}
+
+.skill-box-ps {
+    width: 200px;
+    height: 200px;
+    border: 4px solid #ccc;
+    margin: 10px;
+    background-image: url('./images/ps.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.skill-box-tm {
+    width: 200px;
+    height: 200px;
+    border: 4px solid #ccc;
+    margin: 10px;
+    background-image: url('./images/tm.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.skill-box-lst {
+    width: 200px;
+    height: 200px;
+    border: 4px solid #ccc;
+    margin: 10px;
+    background-image: url('./images/team.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+
+.skill-box {
+    position: relative;
+    width: 200px;
+    height: 200px;
+    border: 4px solid #ccc;
+    margin: 10px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.skill-content {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(255, 255, 255, 0.8);
+    padding: 10px;
+    text-align: center;
+}
+
+.skill-content p {
+    margin: 0;
+    color: black;
+}
+
+
+.skill-box p {
+    color: black;
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.contact-sections {
+    font-size: 16px;
+}
+
+
+
+.card {
+    background-color: #eee;
+    border-radius: 10px;
+    padding: 25px;
+    margin: 10px;
+}
+
+.card:hover {
+    transition: 0.3s;
+    background-color: #2A324B;
+    color: #eee;
+}
+
+.card:hover .info p {
+    transition: 0.3s;
+    color: #eee;
+}
+
+.icon {
+    font-size: 3em;
+    text-align: center;
+}
+
+
+.info {
+    text-align: center;
+}
+
+.info h3 {
+    font-weight: bold;
+    margin: 10px;
+}
+
+.project-card {
+    float: left;
+    position: relative;
+    margin: 0.5%;
+}
+
+.project-card img {
+    width: 100%;
+    margin-bottom: -4px;
+}
+
+.project-card .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.2);
+    color: #fff;
+    opacity: 0;
+}
+
+.project-card img,
+.project-card .overlay {
+    transition: 0.3s all;
+    border-radius: 3px;
+}
+
+.project-card .overlay h2 {
+    padding-top: 20%;
+    color: #eee;
+}
+
+.project-card:hover .overlay {
+    opacity: 1;
+}
+
+.project-card:hover img {
+    -webkit-filter: blur(2px);
+    filter: blur(2px);
+}
+
+.footer {
+    display: block;
+    text-align: center;
+    background-color: #2A324B;
+    color: #eee;
+    padding: 20px;
+    margin-bottom: 0;
+}
+
+.footer p span {
+    color: red;
+}
+
+.footer p a {
+    color: #eee;
+}
+
+@media (max-width:1024px) {
+    .welcome-header {
+        padding: 12px 20px;
+    }
+
+    .nav-bar {
+        padding-left: 10px;
+    }
+
+    .style-sections {
+        padding: 80px 20px;
+    }
+
+    .style-sections h2 {
+        font-size: 1.2em;
+    }
+
+    .style-sections h3 {
+        font-size: 1.6em;
+    }
+
+    .style-sections pre {
+        font-size: 12px;
+        align-items: center;
+    }
+
+    .style-sections p {
+        font-size: 20px;
+    }
+
+    .skills-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+
+}
+
+@media (max-width:800px) {
+    body {
+        font-size: 12px;
+    }
+
+    .style-sections h2 {
+        font-size: 0.8em;
+    }
+
+    .style-sections h3 {
+        font-size: 1.4em;
+    }
+
+}
+
+@media(max-width:568px) {
+    body {
+        font-size: 20px;
+    }
 }
